update list of symvols

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -494,7 +494,7 @@ The average measured bunch length over the coast was found to be, 4$\sigma_t$=1.
 \subsection{Experiment IV: emittance growth measurements driven primarily by amplitude noise}\label{subsec:2022_exp4_intensity}
 
 \begin{figure}[h]
-    \centering         §
+    \centering       
     \includegraphics[width=0.6\textwidth]{images/app_e/intensity_cc_md_12Sep22_coast_12.png}
         \caption{Evolution of the intensity during the CC Experiment IV on September 12, 2022.}
         \label{fig:bunch_length_exp4}
