--- a/symbols.tex
+++ b/symbols.tex
@@ -1,75 +1,91 @@
 \nomenclature[01]{\(  L  \)}{Instantaneous luminosity of a collider.}
-\nomenclature[02]{\(f_\mathrm{rev}\), $\omega_\mathrm{rev}$}{Revolution frequency of the machine in [Hz] and in [rad/s] respectively.} 
-\nomenclature[03]{\(\sigma_x\),  \(\sigma_y\)}{Horizontal and vertical rms beam size in [m].} 
-\nomenclature[04]{$\sigma_z$, $\sigma_t$, $\sigma_\phi$}{rms bunch length in units of [m], [s] and [rad] respectively.} 
-\nomenclature[05]{$C_0$}{Circumference of the accelerator.} 
-\nomenclature[06]{$\mathbf{F}_L$}{Lorentz force vector.}
-\nomenclature[07]{$\mathbf{E}$}{Electric field vector.}
-\nomenclature[08]{$\mathbf{B}$}{Magnetic field vector.}
-\nomenclature[09]{$\mathbf{v}$}{Velocity vector.}
-\nomenclature[10]{$C$}{Circumference of an accelerator ring.}
-\nomenclature[11]{$R$}{Radius of an accelerator ring.}
-\nomenclature[12]{$E_0, p_0, v_0$}{Reference energy, momentum and velocity.}
-\nomenclature[13]{$\beta_0, \gamma_0$}{Relativistic beta and gamma (Lorentz factor).}
-\nomenclature[14]{$e$, $m_p$}{The proton charge and rest mass respectively.}
-\nomenclature[15]{$\rho$}{Local bending radius.}
-\nomenclature[16]{$c$}{Speed of light in vaccum.}
-\nomenclature[17]{$s$}{Location along the ring.}
-\nomenclature[18]{$(x, x^\prime)$}{Horizontal co-ordinates: position and normalised  momentum to the momentum of the reference particle in units of [m] and [rad] respectively.} % or conjugate momentum, M. Schenl
-\nomenclature[19]{$(y, y^\prime)$}{Vertical co-ordinates: position and normalised momentum to the momentum of the reference particle in units of [m] and [rad] respectively.} % or conjugate momentum
-\nomenclature[20]{$(z,\delta)$}{Longitudinal co-ordinates: position in units of [m] and momentum offset (no units).} % or conjugate momentum
-\nomenclature[21]{$(p_x, p_y, p_z)$}{Particle's momentum in the horizontal, vertical and longitudinal plane respectively.} 
-\nomenclature[22]{$t$}{Time in [s].} 
-\nomenclature[23]{$b_n$, $a_n$}{Normal and skew multipole coefficients.} 
+\nomenclature[02]{\(  L _\mathrm{int} \)}{Integrated luminosity of a collider.}
+\nomenclature[03]{\(  n_b  \)}{Number of colliding bunch pairs.}
+\nomenclature[04]{\(  f_\mathrm{rev}, \omega_\mathrm{rev}  \)}{Revolution frequency and angular revolution frequency of the beam.}
+\nomenclature[05]{\(  N_1, N_2  \)}{Number of particles per colliding bunch.}
+\nomenclature[06]{\(  \sigma_\mathrm{xing}  \)}{Transverse beam size in the crossing plane.}
+\nomenclature[07]{\(  \sigma_\mathrm{xing}  \)}{Crossing angle between the colliding beams.}
+\nomenclature[08]{\(  \sigma_x, \sigma_y  \)}{Horizontal and vertical rms beam size.}
+\nomenclature[09]{\(  \sigma_z  \)}{Rms bunch length in meters.}
+\nomenclature[10]{\(  \sigma_t  \)}{Rms bunch length in seconds.}
+\nomenclature[11]{\(  \sigma_\mathrm{xing}  \)}{Transverse beam size in the crossing plane.}
+\nomenclature[12]{\(  t  \)}{Time parameter.}
+\nomenclature[13]{\(  s  \)}{Parameter of the position along the accelerator ring.}
+\nomenclature[14]{$(x, x^\prime)$}{Horizontal co-ordinates: position and angle.} 
+\nomenclature[15]{$(y, y^\prime)$}{Vertical co-ordinates: position and angle.} 
+\nomenclature[16]{$(z, \delta)$}{Longitudinal co-ordinates: position and relative momentum offset. } 
+\nomenclature[17]{$(p_x, p_y, p_z)$}{Particle's momentum in the horizontal, vertical and longitudinal plane respectively.} 
+\nomenclature[18]{$E_0, p_0, v_0$}{Energy, momentum, and velocity of the reference particle.}
+\nomenclature[19]{$\beta_0, \gamma_0$}{Relativistic beta and gamma (Lorentz factor).}
+\nomenclature[20]{$e, m_p$}{Charge and rest mass of a proton.}
+\nomenclature[21]{$\rho$}{Local bending radius.}
+\nomenclature[22]{$i$}{Imaginary unit}
+\nomenclature[23]{$b_n, \alpha_n$}{Strength of a normal and skew multiple components of $n^\mathrm{th}$ order.}
 \nomenclature[24]{$k_n$}{Normalised normal multipole coefficient.} 
-\nomenclature[25]{$\psi_u(s)$}{Phase advance from the start of the ring, $s_0$, where $u=(x,y)$.} 
-\nomenclature[26]{$\Delta \psi_u$}{Phase advance between two locations along the ring, with $u=(x,y)$.} 
-\nomenclature[27]{$\alpha_u(s)$, $\beta_u(s)$, $\gamma_u(s)$}{Alpha, beta and gamma functions respectively or Twiss or Courant-Snyder parameters, with $u=(x,y,z)$.} 
-\nomenclature[28]{$D_x(s), D_y(s)$}{Horizontal and vertical dispersion functions, respectively.} 
-\nomenclature[29]{$Q_x$, $Q_y$}{Horizontal and vertical betatron tunes.}
-\nomenclature[30]{$Q_{x0}$, $Q_{y0}$}{Horizontal and vertical working points of an accelerator.} 
-\nomenclature[31]{$J_x$, $J_y$}{Horizontal and vertical action.} 
-\nomenclature[32]{$u_N$, $u^\prime_N$}{Normalised transverse co-ordinates, with $u=(x,y)$.} 
-\nomenclature[33]{$\epsilon^{\mathrm{geom}}_x$, $\epsilon^{\mathrm{geom}}_y$}{Horizontal and vertical geometric emittance of the beam.} 
-\nomenclature[34]{$\epsilon_x$, $\epsilon_y$}{Horizontal and vertical normalised emittance of the beam.} 
-\nomenclature[35]{$D_x$, $D_y$}{Horizontal and vertical dispersion functions.} 
-\nomenclature[36]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of n$^\mathrm{th}$ order.} 
-\nomenclature[37]{$Q_x^{\prime}$, $Q_x^{\prime \prime}$}{Horizontal chromaticity first and second order respectively.} 
-\nomenclature[38]{$Q_y^{\prime}$, $Q_y^{\prime \prime}$}{Vertical chromaticity first and second order respectively.} 
-\nomenclature[39]{$\alpha_{xx}$, $\alpha_{yy}$, $\alpha_{xy}$}{Horizontal, vertical and cross-term detuning coefficients respectively in units of [1/m].} 
-\nomenclature[40]{$T_\mathrm{rev}$}{Revolution period of an accelerator.}
-\nomenclature[41]{$\phi_\mathrm{RF}$}{The phase of the main RF system of an accelerator.}
-\nomenclature[42]{$\omega_\mathrm{RF}$}{The angular frequency of the main RF system of an accelerator.}
-\nomenclature[43]{$h$}{Harmonic number.}
-\nomenclature[44]{$\phi_s$}{The phase of the synchronous particle.}
-\nomenclature[45]{$V_\mathrm{RF}$, $f_\mathrm{RF}$}{Voltage and frequency of the main RF system of an accelerator.}
-\nomenclature[46]{$\alpha_p$}{Momentum compaction factor.}
-\nomenclature[47]{$\eta_p$}{Phase slip factor.}
-\nomenclature[48]{$\gamma_\mathrm{tr}$}{Transition energy.}
-\nomenclature[49]{$Q_s$, $\omega_s$}{Synchrotron tune and angular synchrotron frequency respectively.}
-\nomenclature[50]{$W^\mathrm{const}_x(z)$, $W^\mathrm{const}_y(z)$}{Horizontal and vertical constant wake functions.}
-\nomenclature[51]{$W^\mathrm{dip}_x(z)$, $W^\mathrm{dip}_y(z)$}{Horizontal and vertical dipolar wake functions.}
-\nomenclature[52]{$W^\mathrm{quad}_x(z)$, $W^\mathrm{quad}_y(z)$}{Horizontal and vertical quadrupolar wake functions.}
-\nomenclature[53]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
-\nomenclature[54]{$ \Omega_u ^{(l)} $}{Complex or real valued? coherent frequency shift of headtail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively. \textcolor{red}{to be cheked again.}}
-\nomenclature[55]{$\Delta \Omega_u ^{(l)} $}{Complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
-\nomenclature[56]{$\Delta \Omega_{u, \mathrm{re}} ^{(l)}, \Delta \Omega_{u, \mathrm{im}} ^{(l)} $}{Real and imaginary part of the complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
-\nomenclature[57]{$\Delta Q_u ^{(l)} $}{Coherent freequency shift in tune units, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.\textcolor{red}{to be cheked again.}}
-\nomenclature[58]{$\Delta Q_x ^\mathrm{rms},  \Delta Q_y ^\mathrm{rms} $}{Horizontal and vertical rms betatron tune spread.}
-\nomenclature[59]{$i$}{Imaginary unit.}
-\nomenclature[60]{$V_\mathrm{0, CC}$}{Peak amplitude of the Crab Cavity voltage.}
-\nomenclature[61]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
-\nomenclature[62]{$\phi_\mathrm{CC}$}{Phase of the Crab Cavity.}
-\nomenclature[63]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
-\nomenclature[64]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
-\nomenclature[65]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
-\nomenclature[66]{$S_\theta$}{Power spectral density of dipole noise in units of [$\mathrm{rad^2/Hz}$].}
-\nomenclature[67]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
-\nomenclature[68]{$I_n(x)$}{Modified Bessel function of the first kind.}
-\nomenclature[69]{$\Gamma$}{Gamma function.}
-\nomenclature[70]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[71]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[72]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
-\nomenclature[73]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
-\nomenclature[74]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
-\nomenclature[75]{$E_b$}{Beam energy.} 
+\nomenclature[25]{$F_L$}{Lorentz force vector.}
+\nomenclature[26]{$\mathbf{F_L}$}{Lorentz force vector.}
+\nomenclature[27]{$\mathbf{E}, \mathbf{B}$}{Electric and magnetic field vector.}
+\nomenclature[28]{$\mathbf{v}$}{Velocity vector.}
+\nomenclature[29]{$B_x, B_y$}{Horizontal and vertical components of the magnetic field.}
+\nomenclature[30]{$c$}{Speed of light.}
+\nomenclature[31]{$C_0$}{Circumference of the circular accelerator.}
+\nomenclature[32]{$J_x, J_y$}{Horizontal and vertical actions.}
+\nomenclature[33]{$\psi_x, \psi_y$}{Horizontal and vertical phase advances from $s=0$ to $s$.}
+\nomenclature[34]{$\Delta \psi_u$}{Phase advance between two locations along the ring, with $u=(x,y)$ for the horizontal and vertical plane respectively.} 
+\nomenclature[35]{$\alpha_u(s)$, $\beta_u(s)$, $\gamma_u(s)$}{Alpha, beta and gamma functions respectively or Twiss or Courant-Snyder parameters, with $u=(x,y)$.} 
+\nomenclature[36]{$Q_x$, $Q_y$}{Horizontal and vertical betatron tunes.}
+\nomenclature[37]{$Q_{x0}$, $Q_{y0}$}{Horizontal and vertical working points of an accelerator.} 
+\nomenclature[38]{$\epsilon^{\mathrm{geom}}_x$, $\epsilon^{\mathrm{geom}}_y$}{Horizontal and vertical geometric emittance.} 
+\nomenclature[39]{$\epsilon_x$, $\epsilon_y$}{Horizontal and vertical normalised emittance.} 
+\nomenclature[40]{$s_1$, $M_u (s_1 | s_0)$}{Linear transfer matrix from the position $s_0$ to $s_1$.}
+\nomenclature[41]{$D_x$, $D_y$}{Horizontal and vertical dispersion functions.}  
+\nomenclature[42]{$\sigma_\delta$}{Momentum spread or rms momentum deviation.}
+\nomenclature[43]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of $n^\mathrm{th}$ order.} 
+\nomenclature[44]{$Q_x^{\prime}$, $Q_y^{\prime}$}{Horizontal cand vertical hromaticity of first order.}   
+\nomenclature[45]{$L_3$}{Length of an octupole magnet.}  
+\nomenclature[46]{$\alpha_{xx}$, $\alpha_{yy}$, $\alpha_{xy}$}{Horizontal, vertical, and cross-term detuning coefficients, respectively.}  
+\nomenclature[47]{$T_\mathrm{rev}$}{Revolution period.}
+\nomenclature[48]{$f_\mathrm{RF}, \omega_\mathrm{RF}$}{Frequency and angular frequency of the main RF system of the accelerator.}
+\nomenclature[49]{$V_\mathrm{RF}$}{Voltage of the main RF system of the accelerator.}
+\nomenclature[50]{$h$}{Harmonic number.}
+\nomenclature[51]{$\phi_s$}{The phase of the synchronous particle.}
+\nomenclature[52]{$\eta_p$}{Phase slip factor.}
+\nomenclature[53]{$Q_s$, $\omega_s$}{Synchrotron tune and angular synchrotron frequency respectively.}
+\nomenclature[54]{$W_x(z)$, $W_y(z)$}{Horizontal and vertical wakefunctions.}
+\nomenclature[55]{$W^\mathrm{const}_x(z)$, $W^\mathrm{const}_y(z)$}{Horizontal and vertical constant wakefunctions.}
+\nomenclature[56]{$W^\mathrm{dip}_x(z)$, $W^\mathrm{dip}_y(z)$}{Horizontal and vertical dipolar wakefunctions.}
+\nomenclature[57]{$W^\mathrm{quad}_x(z)$, $W^\mathrm{quad}_y(z)$}{Horizontal and vertical quadrupolar wakefunctions.}
+\nomenclature[58]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
+\nomenclature[59]{$(m,l)$}{Transverse and azimuthal head-tail modes.}
+\nomenclature[60]{$ \Omega_{u0} ^{(l)} $}{Complex coherent frequency shift of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane, respectively.}
+\nomenclature[61]{$\Delta \Omega_u ^{(l)} $}{Complex frequency shift of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
+\nomenclature[62]{$\Delta \Omega_{u, \mathrm{re}} ^{(l)}, \Delta \Omega_{u, \mathrm{im}} ^{(l)} $}{Real and imaginary part of the complex frequency shift of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
+\nomenclature[63]{$\omega_x, \omega_y$}{Horizontal and vertical angular betatron frequencies}
+\nomenclature[64]{$\Gamma$}{Gamma function.}
+\nomenclature[65]{$Z_\mathrm{eff}$}{Effective impedance.}
+\nomenclature[66]{$1/\tau_u$}{Growth (+ sign) or damping (- sign) rate of the head-tail mode $l$, where $u=(x,y)$ denotes the horizontal and vertical planes, respectively.}
+\nomenclature[67]{$N_\mathrm{mp}$}{Number of macroparticles used in the tracking simulations.}
+\nomenclature[68]{$N_\mathrm{turns}$}{Number of turns used in the tracking simulations.}
+\nomenclature[69]{$\Delta Q_u ^{(l)} $}{Coherent frequency shifts in tune units of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
+\nomenclature[70]{$\Delta Q_x ^\mathrm{rms},  \Delta Q_y ^\mathrm{rms} $}{Horizontal and vertical rms betatron tune spread.}
+\nomenclature[70]{$q_x, q_y $}{Fractional part of the horizontal and vertical betatron tunes.}
+\nomenclature[71]{$S_\theta$}{Power spectral density of dipole noise.}
+\nomenclature[72]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal.}
+\nomenclature[73]{$V_\mathrm{CC}(t)$}{Crab Cavity voltage.}
+\nomenclature[74]{$V_\mathrm{0, CC}$}{Peak amplitude of Crab Cavity voltage.}
+\nomenclature[75]{$f_\mathrm{CC}$}{Crab Cavity frequency.}
+\nomenclature[76]{$\phi_\mathrm{CC}$}{Crab Cavity phase.}
+\nomenclature[77]{$\Delta A, \Delta \phi$}{Relative deviation from the nominal amplitude and deviation from the nominal phase of the Crab Cavity.}
+\nomenclature[78]{$\sigma_{\Delta A}^2, \sigma_{\Delta \phi}^2$}{Total noise power of amplitude and phase noise.}
+\nomenclature[79]{$I_n(x)$}{Modified Bessel function of the first kind.}
+\nomenclature[80]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
+\nomenclature[81]{$\sigma_\phi$}{Rms bunch length in radians.}
+\nomenclature[82]{$f$}{Frequency parameter.}
+\nomenclature[83]{$\mathcal{L}(f)$}{Script-ell of $f$: the standard measure for characterising instabilities in the frequency domain.}
+\nomenclature[84]{$(A, \theta, d)$}{Amplitude, phase and vertical offset parameter of the sinusoidal fitting function used in this thesis.}
+\nomenclature[85]{$(P, k, \mu, \sigma)$}{Amplitude, offser, mean and standard deviation of the Gaussian fitting function used in this thesis.}
+\nomenclature[86]{$(c_0, c_1)$}{Initial value of the emittance and emittance growth rate for the polynomial fitting function used in this thesis.}
+\nomenclature[87]{$d\epsilon_x/dt, d\epsilon_y/dt$}{Horizontal and vertical normalised emittance growth rates.}
+\nomenclature[88]{$\tau_\mathrm{decoh}$}{Decoherence time of the betatron oscillations.}
+\nomenclature[89]{$f_b$}{Frequency of the first betatron sideband.}
+\nomenclature[89]{$E_b$}{Beam energy.}
