list of symbols but the ones in the appendix

--- a/main.tex
+++ b/main.tex
@@ -44,8 +44,8 @@
 \newcommand{\Qpx}{{Q^\prime_{x}}}
 \newcommand{\Qpy}{{Q^\prime_{y}}}
 \newcommand{\sigmat}{{\sigma_t}}
-\newcommand{\emitx}{{\epsilon^n_{x}}}
-\newcommand{\emity}{{\epsilon^n_{y}}}
+\newcommand{\emitx}{{\epsilon_{x}}}
+\newcommand{\emity}{{\epsilon_{y}}}
 \newcommand{\emitxgeom}{{\epsilon_x^{geom}}}
 \newcommand{\emitygeom}{{\epsilon_y^{geom}}}
 \newcommand{\Dqxrms}{{\Delta\: \!Q^{rms}_{x}}}
