--- a/symbols.tex
+++ b/symbols.tex
@@ -82,10 +82,11 @@
 \nomenclature[81]{$\sigma_\phi$}{Rms bunch length in radians.}
 \nomenclature[82]{$f$}{Frequency parameter.}
 \nomenclature[83]{$\mathcal{L}(f)$}{Script-ell of $f$: the standard measure for characterising instabilities in the frequency domain.}
-\nomenclature[84]{$(A, \theta, d)$}{Amplitude, phase and vertical offset parameter of the sinusoidal fitting function used in this thesis.}
-\nomenclature[85]{$(P, k, \mu, \sigma)$}{Amplitude, offser, mean and standard deviation of the Gaussian fitting function used in this thesis.}
+\nomenclature[84]{$(A, \theta, d)$}{Amplitude, phase, and vertical offset parameter of the sinusoidal fitting function used in this thesis.}
+\nomenclature[85]{$(P, k, \mu, \sigma)$}{Amplitude, offset, mean, and standard deviation of the Gaussian fitting function used in this thesis.}
 \nomenclature[86]{$(c_0, c_1)$}{Initial value of the emittance and emittance growth rate for the polynomial fitting function used in this thesis.}
 \nomenclature[87]{$d\epsilon_x/dt, d\epsilon_y/dt$}{Horizontal and vertical normalised emittance growth rates.}
 \nomenclature[88]{$\tau_\mathrm{decoh}$}{Decoherence time of the betatron oscillations.}
 \nomenclature[89]{$f_b$}{Frequency of the first betatron sideband.}
-\nomenclature[89]{$E_b$}{Beam energy.}
+\nomenclature[90]{$E_b$}{Beam energy.}
+\nomenclature[91]{$k_\mathrm{LOF}, k_\mathrm{LOD}$}{Normalised strength of the focusing and defocusing Landau octupole families in the Super Proton Synchrotron (SPS).}
