finalise list of symbols

--- a/glossary.tex
+++ b/glossary.tex
@@ -43,6 +43,7 @@
 \textbf{ISOLDE} & \qquad\qquad\qquad Online Isotope Mass Separator \\
 
 
+\textbf{LEP} & \qquad\qquad\qquad Large Electron Positron collider \\
 \textbf{Linac4} & \qquad\qquad\qquad Linear accelerator 4 \\
 \end{tabular}
 %\end{center}
