list of symbols update

--- a/symbols.tex
+++ b/symbols.tex
@@ -22,7 +22,7 @@
 \nomenclature[22]{$i$}{Imaginary unit}
 \nomenclature[23]{$b_n, \alpha_n$}{Strength of a normal and skew multiple components of $n^\mathrm{th}$ order.}
 \nomenclature[24]{$k_n$}{Normalised normal multipole coefficient.} 
-\nomenclature[25]{$F_L$}{Lorentz force vector.}
+%\nomenclature[25]{$F_L$}{Lorentz force vector.}
 \nomenclature[26]{$\mathbf{F_L}$}{Lorentz force vector.}
 \nomenclature[27]{$\mathbf{E}, \mathbf{B}$}{Electric and magnetic field vector.}
 \nomenclature[28]{$\mathbf{v}$}{Velocity vector.}
@@ -38,10 +38,10 @@
 \nomenclature[38]{$\epsilon^{\mathrm{geom}}_x$, $\epsilon^{\mathrm{geom}}_y$}{Horizontal and vertical geometric emittance.} 
 \nomenclature[39]{$\epsilon_x$, $\epsilon_y$}{Horizontal and vertical normalised emittance.} 
 \nomenclature[40]{$s_1$, $M_u (s_1 | s_0)$}{Linear transfer matrix from the position $s_0$ to $s_1$.}
-\nomenclature[41]{$D_x$, $D_y$}{Horizontal and vertical dispersion functions.}  
+\nomenclature[41]{$D_x(s)$, $D_y(s)$}{Horizontal and vertical dispersion functions.}  
 \nomenclature[42]{$\sigma_\delta$}{Momentum spread or rms momentum deviation.}
 \nomenclature[43]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of $n^\mathrm{th}$ order.} 
-\nomenclature[44]{$Q_x^{\prime}$, $Q_y^{\prime}$}{Horizontal cand vertical hromaticity of first order.}   
+\nomenclature[44]{$Q_x^{\prime}$, $Q_y^{\prime}$}{Horizontal cand vertical chromaticity of first order.}   
 \nomenclature[45]{$L_3$}{Length of an octupole magnet.}  
 \nomenclature[46]{$\alpha_{xx}$, $\alpha_{yy}$, $\alpha_{xy}$}{Horizontal, vertical, and cross-term detuning coefficients, respectively.}  
 \nomenclature[47]{$T_\mathrm{rev}$}{Revolution period.}
@@ -50,14 +50,14 @@
 \nomenclature[50]{$h$}{Harmonic number.}
 \nomenclature[51]{$\phi_s$}{The phase of the synchronous particle.}
 \nomenclature[52]{$\eta_p$}{Phase slip factor.}
-\nomenclature[53]{$Q_s$, $\omega_s$}{Synchrotron tune and angular synchrotron frequency respectively.}
+\nomenclature[53]{$Q_s$, $\omega_s$}{Synchrotron tune and angular synchrotron frequency, respectively.}
 \nomenclature[54]{$W_x(z)$, $W_y(z)$}{Horizontal and vertical wakefunctions.}
 \nomenclature[55]{$W^\mathrm{const}_x(z)$, $W^\mathrm{const}_y(z)$}{Horizontal and vertical constant wakefunctions.}
 \nomenclature[56]{$W^\mathrm{dip}_x(z)$, $W^\mathrm{dip}_y(z)$}{Horizontal and vertical dipolar wakefunctions.}
 \nomenclature[57]{$W^\mathrm{quad}_x(z)$, $W^\mathrm{quad}_y(z)$}{Horizontal and vertical quadrupolar wakefunctions.}
 \nomenclature[58]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
-\nomenclature[59]{$(m,l)$}{Transverse and azimuthal head-tail modes.}
-\nomenclature[60]{$ \Omega_{u0} ^{(l)} $}{Complex coherent frequency shift of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane, respectively.}
+\nomenclature[59]{$(m,l)$}{Transverse and azimuthal head, respectively.}
+\nomenclature[60]{$ \Omega_{u0} ^{(l)} $}{Complex coherent frequency of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane, respectively.}
 \nomenclature[61]{$\Delta \Omega_u ^{(l)} $}{Complex frequency shift of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
 \nomenclature[62]{$\Delta \Omega_{u, \mathrm{re}} ^{(l)}, \Delta \Omega_{u, \mathrm{im}} ^{(l)} $}{Real and imaginary part of the complex frequency shift of head-tail mode $l$, with $u=(x,y)$ denoting the horizontal and vertical plane respectively.}
 \nomenclature[63]{$\omega_x, \omega_y$}{Horizontal and vertical angular betatron frequencies}
