--- a/main.tex
+++ b/main.tex
@@ -56,8 +56,8 @@
 \newcommand{\chromaxi}{{\xi^{n}_x}}
 
 % Commands to avoid breaking words across lines in Latex
-\tolerance=1
-\emergencystretch=\maxdimen
+\tolerance=1 %1000
+\emergencystretch= \maxdimen
 \exhyphenpenalty=10000
 \hyphenpenalty=10000
 
