--- a/mypackages.sty
+++ b/mypackages.sty
@@ -102,9 +102,10 @@
 \newcommand{\hsp}{\hspace{20pt}}
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\LARGE\bfseries}
 
+% The following lines align the titles of sections and subsection to the left
 \makeatletter
-\titleformat*{\section}{\Large\bfseries}
-\titleformat*{\subsection}{\large\bfseries}
+\titleformat*{\section}{\Large\bfseries\raggedright}
+\titleformat*{\subsection}{\large\bfseries\raggedright}
 \makeatother
 
 \usepackage{caption}
