change space before and after chapters, sectins etc

--- a/mypackages.sty
+++ b/mypackages.sty
@@ -102,11 +102,23 @@
 \newcommand{\hsp}{\hspace{20pt}}
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\LARGE\bfseries}
 
+
 % The following lines align the titles of sections and subsection to the left
 \makeatletter
 \titleformat*{\section}{\Large\bfseries\raggedright}
 \titleformat*{\subsection}{\large\bfseries\raggedright}
 \makeatother
+
+% Define spacing before and after Sections and Subsections
+% Source: https://tex.stackexchange.com/questions/108684/spacing-before-and-after-section-titles
+\titlespacing*{\chapter}
+{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+\titlespacing*{\section}
+{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+\titlespacing*{\subsection}
+{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+\titlespacing*{\subsubsection}
+{0pt}{0.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
 
 \usepackage{caption}
 \usepackage{subcaption}
