--- a/glossary.tex
+++ b/glossary.tex
@@ -75,10 +75,10 @@
 \textbf{PS} & \qquad\qquad\qquad Proton Synchrotron \\
 \textbf{PSD} & \qquad\qquad\qquad Power Spectral Density \\
 \textbf{PSB} & \qquad\qquad\qquad Proton Synchrotron Booster \\
+
+\textbf{SI} & \qquad\qquad\qquad International System of Units \\
 \textbf{SPS} & \qquad\qquad\qquad Super Proton Synchrotron \\
 
-
-\textbf{HL-LHC} & \qquad\qquad\qquad High-Luminosity Large Hadron Collider \\
 
 \textbf{WCM} & \qquad\qquad\qquad Wall Current Monitor \\
 \textbf{WS} & \qquad\qquad\qquad Wire Scanners \\
