--- a/symbols.tex
+++ b/symbols.tex
@@ -90,3 +90,4 @@
 \nomenclature[89]{$f_b$}{Frequency of the first betatron sideband.}
 \nomenclature[90]{$E_b$}{Beam energy.}
 \nomenclature[91]{$k_\mathrm{LOF}, k_\mathrm{LOD}$}{Normalised strength of the focusing and defocusing Landau octupole families in the Super Proton Synchrotron (SPS).}
+\nomenclature[92]{$N_b$}{Bunch intensity i.e. number of particles in the bunch.}
