some more changes chapter 4

--- a/mypackages.sty
+++ b/mypackages.sty
@@ -86,7 +86,7 @@
 
 
 %\usepackage[parfill]{parskip} % new paragraph, skip intend
-\usepackage[skip=12pt plus1pt, indent=0pt]{parskip}
+\usepackage[skip=12pt, indent=0pt]{parskip}
 
 \usepackage{tabularx, booktabs} % extra features for tabular environment
 \usepackage{tabu} % customizing tabu (for multicolumns)
