--- a/mypackages.sty
+++ b/mypackages.sty
@@ -24,12 +24,16 @@
 \pagestyle{fancy}
 \fancyhf{}
 
+
+\usepackage{etoolbox}
+
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}} % remove the word "chapter" from header
 \setlength{\headheight}{15pt} 
 \fancyhead[LE]{\textbf{\nouppercase{\thechapter. \leftmark }}}
 \fancyhead[RO]{\textbf{\nouppercase{\rightmark}}}
 \fancyfoot[LE,RO]{\thepage}
 
+\patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{fancy}}{}{}
 
 % For bibliography
 \usepackage[backend=biber, style=numeric,sorting=none]{biblatex}
@@ -113,14 +117,19 @@
 
 % Define spacing before and after Sections and Subsections
 % Source: https://tex.stackexchange.com/questions/108684/spacing-before-and-after-section-titles
-\titlespacing*{\chapter}
-{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
-\titlespacing*{\section}
-{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
-\titlespacing*{\subsection}
-{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
-\titlespacing*{\subsubsection}
-{0pt}{0.5ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+%%\titlespacing*{\chapter}
+%{0pt}{2.3ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+%\titlespacing*{\section}
+%{0pt}{2.3ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+%\titlespacing*{\subsection}
+%{0pt}{2.3ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+%\titlespacing*{\subsubsection}
+%{0pt}{2.3ex plus 1ex minus .2ex}{2.3ex plus .1ex}
+
+\titlespacing{\chapter}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+\titlespacing{\section}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+\titlespacing{\subsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+\titlespacing{\subsubsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
 
 \usepackage{caption}
 \usepackage{subcaption}
