--- a/mypackages.sty
+++ b/mypackages.sty
@@ -25,7 +25,7 @@
 \fancyhf{}
 
 
-\usepackage{etoolbox}
+
 
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}} % remove the word "chapter" from header
 \setlength{\headheight}{15pt} 
@@ -33,6 +33,8 @@
 \fancyhead[RO]{\textbf{\nouppercase{\rightmark}}}
 \fancyfoot[LE,RO]{\thepage}
 
+% The following lines allow the use of the above-defined LE, RO in the first page of the chapter
+\usepackage{etoolbox}
 \patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{fancy}}{}{}
 
 % For bibliography
@@ -126,10 +128,15 @@
 %\titlespacing*{\subsubsection}
 %{0pt}{2.3ex plus 1ex minus .2ex}{2.3ex plus .1ex}
 
-\titlespacing{\chapter}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
-\titlespacing{\section}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
-\titlespacing{\subsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
-\titlespacing{\subsubsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+%\titlespacing{\chapter}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+%\titlespacing{\section}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+%\titlespacing{\subsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+%\titlespacing{\subsubsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
+
+\titlespacing{\chapter}{0pt}{14pt}{14pt}
+\titlespacing{\section}{0pt}{14pt}{14pt}
+\titlespacing{\subsection}{0pt}{14pt}{14pt}
+\titlespacing{\subsubsection}{0pt}{14pt}{14pt}
 
 \usepackage{caption}
 \usepackage{subcaption}
