safety checkout in chapter 4

--- a/main.tex
+++ b/main.tex
@@ -48,8 +48,8 @@
 \newcommand{\emity}{{\epsilon_{y}}}
 \newcommand{\emitxgeom}{{\epsilon_x^{geom}}}
 \newcommand{\emitygeom}{{\epsilon_y^{geom}}}
-\newcommand{\Dqxrms}{{\Delta\: \!Q^{rms}_{x}}}
-\newcommand{\Dqyrms}{{\Delta\: \!Q^{rms}_{y}}}
+\newcommand{\Dqxrms}{{\Delta\: \!Q^\mathrm{rms}_{x}}}
+\newcommand{\Dqyrms}{{\Delta\: \!Q^\mathrm{rms}_{y}}}
 \newcommand{\axx}{{\alpha_{xx}}}
 \newcommand{\ayy}{{\alpha_{yy}}}
 \newcommand{\axy}{{\alpha_{yx}}}
