list of acronyms fixed

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -1,3 +1,4 @@
+\thispagestyle{simple} % formatting the first page of each chapter
 \section{Basic terminology}\label{app:statistics_definitions}
 This appendix, introduces the basic terminology of statistical analysis and gives the definitions that are used in this thesis. The definitions follow the book by R. J. Barlow~\cite{lvp.b313005720130101} where one can find a more detailed insight. Note that the use of the parameters $x$ and $y$ in this Appendix is not related to the co-ordinates introduced to describe the motion of the particles in the transverse plane.
 
