--- a/appendix/appendix_HT_monitor.tex
+++ b/appendix/appendix_HT_monitor.tex
@@ -1,3 +1,4 @@
+\thispagestyle{simple} % formatting the first page of each chapter
 The SPS is equipped with a pick-up of approximately 2\,GHz bandwidth allowing to resolve the intra-bunch motion. This instrument is called Head-Tail (HT) monitor and was originally designed for measuring chromaticity and transverse instabilities. However, in the SPS $\CC$ tests, the Head-Tail monitor was the main diagnostic device deployed for the demonstration of the crabbing and the reconstruction of the $\CC$ voltage as experienced by the beam. Its use as a crabbing diagnostic shall be explained here. The methods and procedures described in this section were developed at CERN and are described here for completeness.
 
 In the first part of this section, some general information on the instrument along with example signals will be presented. Subsequently, the post-processing of the Head-Tail signal in the presence of the $\CC$ will be discussed. Last, the calibration of the $\CC$ voltage from the Head-Tail data is described and a schematic representation of the "crabbing" is displayed. The term crabbing is used here to describe the z-dependent orbit offset induced by the CC kick. The experimental data presented in this section were acquired on May 30, 2018 (time-stamp: 13:51:05), at the SPS injection energy of 26\,GeV with only one $\CC$, $\CC$1, at phase $\phi_\mathrm{CC}=0$ (this means that a particle at the center of the bunch doesn't receive any transverse deflection). The energy of 26\,GeV was chosen to provide a better understanding of the methods used as the orbit shift from the $\CC$ kick is stronger and thus more visible than at higher energies.
@@ -63,7 +64,7 @@ For the $\CC$ experiments a reference measurement had first to be made with the 
 
 %At this point, it should be mentioned that the baseline (blue dashed line in Fig.~\ref{fig:HT_baseline_correction}) appears to vary with position within the bunch. The origin for this is not yet understood and will have to be addressed in the future to fully understand .... However, here is our working assumption ...
 
-\normalsize{\textbf{Head-Tail monitor scaling}}\\
+\textbf{Head-Tail monitor scaling}\\
 The last step to make the Head-Tail acquisitions meaningful is to convert the measured intra-bunch offset (the mean of the difference signals following phase synchronisation and baseline correction) from arbitrary units to millimeters. The scaling is achieved by dividing by the mean of the sum signals (which is a function of the position along the bunch and is calculated for each point individually over many turns) after the synchronisation and with a normalisation factor which is provided by the calibration of the Head-Tail monitor~\cite{PhysRevAccelBeams.22.112803}. The normalisation factor for the SPS was measured at 0.1052 in 2018~\cite{HT_calibration_2018}. Figure~\ref{fig:HT_baseline_correction_crabbing_mm} shows the intra-bunch offset from the $\CC$ kick in millimeters and after the baseline correction. 
 
 % /eos/user/n/natriant/2018/CC_MD_2018_summary/2018_HT_monitor/MD2_phase_scan_CC1/main_example_135105/plot_1example_HT_acquisition_for_thesis_30May2018-135105_for_thesis_sin_fit_forCh4_fixed_fcc-CC_post_processing_Ch4_3_2_and_after.ipynb
@@ -84,7 +85,7 @@ The last step to make the Head-Tail acquisitions meaningful is to convert the me
 
 where $\beta_y$ is the beta function, $\Qy$ is the tune, and $\mid \psi_{y, HT} - \psi_{y, CC} \mid$ is the vertical phase advance (in radians) between the $\CC$ and the Head-Tail monitor. The same applies for the horizontal plane. The subscripts Head-Tail and CC indicate quantities at the location of the Head-Tail monitor and CC respectively.
 
-The $\CC$ voltage experienced by the beam is then reconstructed from the $\CC$ kick which is written as $\theta = - \frac{q V_\mathrm{CC}(t)}{\symE}$, where $q$ is the charge of the particle, $\symE$ the beam energy and $V_\mathrm{CC}(t) = V_\mathrm{CC} \sin(2 \pi \CCfrequency t + \phi_\mathrm{CC}) $ is the voltage that a particle experiences while passing through the $\CC$. In the context where the Head-Tail monitor measures the signal as a function of time, $t$, the voltage in the above formula is expressed accordingly as $V_\mathrm{CC}(t)$, where $t=0$ the center of the bunch as it passes through the Head-Tail monitor.
+The $\CC$ voltage experienced by the beam is then reconstructed from the $\CC$ kick which is written as $\theta = - \frac{q V_\mathrm{CC}(t)}{\symE}$, where $q$ is the charge of the particle, $\symE$ the beam energy and $V_\mathrm{CC}(t) = \CCvoltage \sin(2 \pi \CCfrequency t + \phi_\mathrm{CC}) $ is the voltage that a particle experiences while passing through the $\CC$. In the context where the Head-Tail monitor measures the signal as a function of time, $t$, the voltage in the above formula is expressed accordingly as $V_\mathrm{CC}(t)$, where $t=0$ the center of the bunch as it passes through the Head-Tail monitor.
 
 % 1. locally PhD_projects/CC_MD_2021_summary/HT_monitor/2018_HT_monitor/MD2_phase_scan
 % /eos/user/n/natriant/2018/CC_MD_2018_summary/2018_HT_monitor/MD2_phase_scan_CC1/main_example_135105/plot_1example_HT_acquisition_for_thesis_30May2018-135105_for_thesis_sin_fit_forCh4_fixed_fcc-CC_post_processing_Ch4_3_2_and_after.ipynb
