--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -1,3 +1,4 @@
+\thispagestyle{simple} % formatting the first page of each chapter
 \section{Example bunch profiles from Wire Scanner measurements}\label{sec:sps_transverse_beam_profiles}
 
 \textbf{Uncertainties of the Gaussian fit}\\
