--- a/symbols.tex
+++ b/symbols.tex
@@ -1,3 +1,5 @@
+
+\thispagestyle{simple} % formatting the first page of each chapter
 \nomenclature[01]{\(  L  \)}{Instantaneous luminosity of a collider.}
 \nomenclature[02]{\(  L _\mathrm{int} \)}{Integrated luminosity of a collider.}
 \nomenclature[03]{\(  n_b  \)}{Number of colliding bunch pairs.}
