--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -1,3 +1,4 @@
+\thispagestyle{simple} % formatting the first page of each chapter
 % overleaf document: measured noise spectrum2 simulations with some small modifications. Also use passive voice instead of "we". 
 %% plots are produced: cernbox/Project_thesis/scripts_for_simple_figures_plots (also at /eos/user/n/natriant/2018/CC_MD_2018_summary/measured_psd/job000). and for Fig.6 /eos/user/n/natriant/pyheadtail_data/9July2021. 
 
