--- a/glossary.tex
+++ b/glossary.tex
@@ -1,4 +1,5 @@
 \chapter*{List of Acronyms}
+\thispagestyle{simple} % formatting the first page of each chapter
 \addcontentsline{toc}{chapter}{List of Acronyms}
 
 %\vspace{0.5cm}
