--- a/mypackages.sty
+++ b/mypackages.sty
@@ -25,6 +25,17 @@
 \fancyhf{}
 
 
+\fancypagestyle{simple}{
+  \fancyhf{}
+  \fancyfoot[LE,RO]{\thepage}
+  \renewcommand{\headrulewidth}{0pt}
+}
+
+
+\fancypagestyle{conclusions}{
+  \fancyhf{}
+  \lhead{\textbf{8. Conclusions}}
+}
 
 
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}} % remove the word "chapter" from header
@@ -133,7 +144,7 @@
 %\titlespacing{\subsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
 %\titlespacing{\subsubsection}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
 
-\titlespacing{\chapter}{0pt}{14pt}{14pt}
+\titlespacing{\chapter}{0pt}{0pt}{14pt}
 \titlespacing{\section}{0pt}{14pt}{14pt}
 \titlespacing{\subsection}{0pt}{14pt}{14pt}
 \titlespacing{\subsubsection}{0pt}{14pt}{14pt}
