remove heading from abstract and aknolwedgmetns

--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -2,6 +2,7 @@
 \cleardoublepage
 \chapter*{Abstract}
 \markboth{Abstract}{Abstract}
+\thispagestyle{simple} % formatting the first page of each chapter
 \addcontentsline{toc}{chapter}{Abstract} % adds an entry to the table of contents
 % put your text here
 
