--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -2,6 +2,7 @@
 \cleardoublepage
 \chapter*{Acknowledgments}
 \markboth{Acknowledgments}{Acknowledgments}
+\thispagestyle{simple} % formatting the first page of each chapter
 \addcontentsline{toc}{chapter}{Acknowledgments} % adds an entry to the table of contents
 % put your text here
 
