--- a/main.tex
+++ b/main.tex
@@ -75,7 +75,6 @@
 }
 
 
-
 \begin{document}
 \frontmatter
 % The front matter
@@ -97,11 +96,10 @@
 
 \tableofcontents
 
-
 \listoffigures
 \addcontentsline{toc}{chapter}{List of figures}
 \listoftables
-\addcontentsline{toc}{chapter}{List of tables}
+\addcontentsline*{toc}{chapter}{List of tables}
 
 
 %\thispagestyle{plain} % removing headings from this specific page
