--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -204,6 +204,10 @@ In this section, the individual emittance growth measurements for each coast fro
             \includegraphics[width=.95\linewidth]{images/app_c/emit_vs_time_Set1_coast4.png}  
             \caption{$k_\mathrm{LOD}=0  \mathrm{/m^{4}}$}
     \end{subfigure}
+    \label{fig:dipole_noise_md_2022_overview_plots_klod_scan}
+\end{figure}
+\begin{figure}[ht]\ContinuedFloat
+
     \begin{subfigure}{.45\textwidth}
         \centering
         \includegraphics[width=.95\linewidth]{images/app_c/emit_vs_time_Set1_coast5.png}  
