--- a/main.tex
+++ b/main.tex
@@ -97,9 +97,10 @@
 \tableofcontents
 
 \listoffigures
+
 \addcontentsline{toc}{chapter}{List of figures}
 \listoftables
-\addcontentsline*{toc}{chapter}{List of tables}
+\addcontentsline{toc}{chapter}{List of tables}
 
 
 %\thispagestyle{plain} % removing headings from this specific page
